--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@ layout: page
           </button>        
         </h5>
         <div class="dropdown-content">
-            <p>About me text. Test.</p>
+            <p>I'm a data analyst who values access to high-quality information - whether it's informing healthcare 
+                policy, exploring the phylogenetic roots of pain, or making a homemade pizza.<br> <br> Each of which I've
+                gotten to passionately work on.
+             </p>             
         </div>
     </section>
 
@@ -22,7 +25,7 @@ layout: page
         <h2>Project spotlight: automated nonprofit data aggregator</h2>
         <div class="video-container">
             <video width="560" height="315" controls>
-                <source src="{{ '/assets/videos/990_parser.mp4' | relative_url }}" type="video/mp4">
+                <source src="{{ '/assets/videos/nonprofit_data_scraper_clip.mp4' | relative_url }}" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>        
@@ -35,7 +38,12 @@ layout: page
            </button>
         </h5>
         <div class="dropdown-content">
-            <p>Learn more text ("To see more, click 'here'").</p>
+            <p>This program was built for an asset management firm's targeted client outreach.
+                <br> Previously, ~15 names per hour could be collected manually. This program collected 50K names in < 2 hours.
+                <br> <br> It has since been refactored for general-purpose nonprofit data parsing that anyone can use.
+                <br> <br> Tools used: Python ● SQL (sqlite3) ● <a href="https://www.propublica.org/datastore/api/nonprofit-explorer-api">ProPublica API</a>.
+                <br> <br> See <a href="https://github.com/DPickei/nonprofit_data_scraper">here</a> for the project repository.
+            </p>            
         </div>
     </section>
 </div>
@@ -48,6 +56,18 @@ layout: page
   const pusheenPath = "{{ '/assets/images/pusheens/' | relative_url }}";
 </script>
 <script src="{{ '/assets/js/data/pusheen.js' | relative_url }}"></script>
+
+<script>
+    document.querySelectorAll('.dropdown-btn').forEach(button => {
+  button.addEventListener('click', () => {
+      const dropdownContent = button.parentElement.nextElementSibling;
+      dropdownContent.classList.toggle('show');
+
+      const carrot = button.querySelector('.carrot');
+      carrot.classList.toggle('rotated');
+  });
+});
+</script>
 
 <style>
 .container {
