Updated sidebar option to fit for mobile. Adjusted margins between sidebar and main content for desktop. Adjusted video container dimensions. Testing change of carrot size to keep image the same between desktop and mobile.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@ h5.dropdown, h2 {
     transform: rotate(90deg); /* Point down when rotated */
 }
 
+@media (max-width: 768px) {
+  .carrot {
+    font-size: 1em; /* Adjust the font size for mobile */
+  }
+}
+
 #pusheenContainer .pusheen {
   position: absolute;
   width: 100px; /* Adjust size as needed */
