linked 'phylogenetic roots of pain' to Invincible Wellbeing'

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@ layout: page
         </h5>
         <div class="dropdown-content">
             <p>I'm a data analyst who values access to high-quality information - whether it's informing healthcare 
-                policy, exploring the phylogenetic roots of pain, or making a homemade pizza.<br> <br> Each of which I've
-                gotten to passionately work on.
+                policy, exploring the <a href="https://www.invinciblewellbeing.com/">
+                    phylogenetic roots of pain</a>, or making a homemade pizza.
+                <br> <br> 
+                Each of which I've gotten to passionately work on.
              </p>             
         </div>
     </section>
