rephrased 'learn more' to 'More about this project' for clarity that the content in the dropdown relates to the project spotlight

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: page
     <section>
         <h5 class="dropdown">
           <button class="dropdown-btn">
-            Learn more  <span class="carrot">&#9654;</span>
+            More about this project  <span class="carrot">&#9654;</span>
            </button>
         </h5>
         <div class="dropdown-content">
