Added project posts

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@ layout: page
           </button>        
         </h5>
         <div class="dropdown-content">
-            <p>I'm a data analyst who values access to high-quality information - whether it's informing healthcare 
+            <p>I value access to high-quality data - whether it's informing healthcare 
                 policy, exploring the <a href="https://www.invinciblewellbeing.com/">
                     phylogenetic roots of pain</a>, or making a homemade pizza.
-                <br> <br> 
+                <br> <br>
                 Each of which I've gotten to passionately work on.
              </p>             
         </div>
     </section>
 
     <section>
-        <h2>Project spotlight: automated nonprofit data aggregator</h2>
+        <h2>Project spotlight: nonprofit data aggregator</h2>
         <div class="video-container">
             <video width="560" height="315" controls>
                 <source src="{{ '/assets/videos/nonprofit_data_scraper_clip.mp4' | relative_url }}" type="video/mp4">
@@ -43,8 +43,7 @@ layout: page
             <p>This program was built for an asset management firm's targeted client outreach.
                 <br> Previously, ~15 names per hour could be collected manually. This program collected 50K names in < 2 hours.
                 <br> <br> It has since been refactored for general-purpose nonprofit data parsing that anyone can use.
-                <br> <br> Tools used: Python ● SQL (sqlite3) ● <a href="https://www.propublica.org/datastore/api/nonprofit-explorer-api">ProPublica API</a>.
-                <br> <br> See <a href="https://github.com/DPickei/nonprofit_data_scraper">here</a> for the project repository.
+                <br> <br> For the full project, see <a href="https://https://dpickei.github.io/posts/Nonprofit-data-aggregator/">here</a>.
             </p>            
         </div>
     </section>
