fixed hyperlink typo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ layout: page
             <p>This program was built for an asset management firm's targeted client outreach.
                 <br> Previously, ~15 names per hour could be collected manually. This program collected 50K names in < 2 hours.
                 <br> <br> It has since been refactored for general-purpose nonprofit data parsing that anyone can use.
-                <br> <br> For the full project, see <a href="https://https://dpickei.github.io/posts/Nonprofit-data-aggregator/">here</a>.
+                <br> <br> For the full project, see <a href="https://dpickei.github.io/posts/Nonprofit-data-aggregator/">here</a>.
             </p>            
         </div>
     </section>
