--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: page
 
 <div class="container">
     <header>
-        <h1>This site is under construction - come back later!.</h1>
+        <h1>Hi, I am David.</h1>
     </header>
 
     <section>
